Image generation new models.